WebCore/platform/graphics/qt/ImageQt.cpp
@@ -108,6 +108,8 @@ void BitmapImage::invalidatePlatformData()
 void BitmapImage::draw(GraphicsContext* ctxt, const FloatRect& dst,
                        const FloatRect& src, CompositeOperator op)
 {
+    startAnimation();
+
     QPixmap* image = nativeImageForCurrentFrame();
     if (!image)
         return;
@@ -131,8 +133,6 @@ void BitmapImage::draw(GraphicsContext* ctxt, const FloatRect& dst,
     painter->drawPixmap(dst, *image, src);
 
     ctxt->restore();
-
-    startAnimation();
 }
 
 void BitmapImage::drawPattern(GraphicsContext* ctxt, const FloatRect& tileRect, const AffineTransform& patternTransform,
